--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#__next, body, html {
+    height: fit-content;
+    min-height: 100vh;
+}
